--- a/GlaDOS_Me/app/src/main/res/values/strings.xml
+++ b/GlaDOS_Me/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_gla_dos_me_p2">GlaDOS_me_p2</string>
 </resources>
